# Wise-Will-agent

./: CHANGELOG.md  README.md  README_EN.md
backend/: .env  .env.example  kimi_runner.py  main.py  mcp.json  pyproject.toml
backend/agent/: agent.yaml  system.md
backend/doc_to_ppt/: __init__.py  generator.py  models.py  parser.py  ppt_builder.py  service.py
backend/doc_uploads/b0781e52/: b0781e52.pptx
backend/manim_service/: __init__.py  executor.py  generator.py  service.py  templates.py
backend/manim_videos/07a2d79f/: scene.py
backend/manim_videos/954516c9/: scene.py
backend/manim_videos/b1544abb/: scene.py
backend/video_processor/: __init__.py  analyzer.py  audio.py  extractor.py  merger.py  models.py  pdf_generator.py  processor.py
frontend/: package-lock.json  (+1 more)
kimi-cli/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  kimi.spec  pyproject.toml  pyrightconfig.json
kimi-cli/.github/: pr-title-checker-config.json  pull_request_template.md
kimi-cli/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
kimi-cli/.github/workflows/: ci.yml  release.yml  translator.yml
kimi-cli/examples/custom-echo-soul/: README.md  main.py  pyproject.toml
kimi-cli/examples/custom-kimi-soul/: README.md  main.py  pyproject.toml
kimi-cli/examples/custom-tools/: README.md  main.py  myagent.yaml  pyproject.toml
kimi-cli/examples/custom-tools/my_tools/: ls.py
kimi-cli/examples/kimi-cli-stream-json/: README.md  main.py  pyproject.toml
kimi-cli/examples/kimi-cli-wire-messages/: README.md  main.py  pyproject.toml
kimi-cli/src/kimi_cli/: __init__.py  agentspec.py  app.py  cli.py  config.py  constant.py  exception.py  llm.py  metadata.py  session.py  share.py
kimi-cli/src/kimi_cli/acp/: __init__.py  convert.py  server.py  session.py  types.py
kimi-cli/src/kimi_cli/prompts/: __init__.py  compact.md  init.md
kimi-cli/src/kimi_cli/soul/: __init__.py  agent.py  approval.py  compaction.py  context.py  denwarenji.py  kimisoul.py  message.py  toolset.py
kimi-cli/src/kimi_cli/tools/: __init__.py  mcp.py  test.py  utils.py
kimi-cli/src/kimi_cli/utils/: aiohttp.py  broadcast.py  changelog.py  clipboard.py  environment.py  logging.py  message.py  path.py  pyinstaller.py  signals.py  string.py  term.py  typing.py
kimi-cli/src/kimi_cli/wire/: __init__.py  message.py  serde.py
kimi-cli/tests/: conftest.py  test_agent_spec.py  test_broadcast_queue.py  test_changelog.py  test_config.py  test_create_subagent.py  test_default_agent.py  test_exceptions.py  test_fetch_url.py  test_file_completer.py  test_glob.py  test_grep.py  test_list_directory.py  test_load_agent.py  test_load_agents_md.py  test_message_utils.py  test_metacmd.py  test_pyinstaller_utils.py  test_read_file.py  test_result_builder.py  test_session.py  test_shell_bash.py  test_shell_powershell.py  test_simple_compaction.py  test_soul_message.py  test_str_replace_file.py  test_tool_descriptions.py  test_tool_schemas.py  test_typing_utils.py  test_utils_environment.py  test_utils_path.py  test_wire_message.py  test_write_file.py
kimi-cli/tests_ai/: test_cli_loading_time.md  test_encoding_error_handling.md  test_utf8_encoding.md
kimi-cli/tests_ai/scripts/: main.yaml  run.py  worker.yaml
kosong/: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  pyproject.toml  pyrightconfig.json
kosong/.github/: dependabot.yml  pr-title-checker-config.json
kosong/.github/workflows/: ci.yml  release.yml  translator.yml  typos.yml
kosong/src/kosong/: __init__.py  __main__.py  _generate.py  message.py
kosong/tests/: test_chat_provider.py  test_context.py  test_echo_chat_provider.py  test_generate.py  test_json_schema_deref.py  test_message.py  test_step.py  test_tool_call.py  test_tool_result.py
kosong/tests/api_snapshot_tests/: common.py  test_anthropic.py  test_google_genai.py  test_kimi.py  test_openai_legacy.py  test_openai_responses.py
(+104 files in other folders)
