[project]
name = "backend"
version = "0.1.0"
description = "AI Education Platform Backend - FastAPI + Kimi CLI Integration"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "websockets>=14.0",
    "kimi-cli",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
kimi-cli = { path = "../kimi-cli", editable = true }
